[tool.poetry]
name = "battery"
version = "0.1.0"
description = ""
authors = ["Lucas <lucas.yikai.han@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10, <3.13"
jupyterlab = "^4.1.1"
pandas = "2.1.4"
scikit-learn = "^1.4.1.post1"
plotly = "^5.19.0"
ray = "^2.9.2"
openpyxl = "^3.1.2"
pyarrow = "^15.0.0"
xgboost = "^2.0.3"
ydata-profiling = "^4.6.4"
ipywidgets = "^8.1.2"
boto3 = "^1.34.45"
botocore = "^1.34.45"
catboost = "^1.2.2"
shap = "^0.44.1"
mlflow = "^2.10.2"
imbalanced-learn = "^0.12.0"
missingno = "^0.5.2"
optuna = "^3.5.0"
hyperopt = "^0.2.7"
kaleido = "0.2.1"
skl2onnx = "^1.16.0"
icecream = "^2.1.3"
graphviz = "^0.20.3"
dtreeviz = "^2.2.2"
deprecated = "^1.2.14"
multipledispatch = "^1.0.0"
tpot = "^0.12.2"
pyod = "^1.1.3"
vaex = "^4.17.0"
polars = "^0.20.21"
dask = {extras = ["dataframe"], version = "^2024.4.2"}
tsfresh = "^0.20.2"
sktime = "^0.28.0"
darts = "^0.29.0"
tslearn = "^0.6.3"
kmodes = "^0.12.2"
scikit-learn-extra = "^0.3.0"
lime = "^0.2.0.1"
lightgbm = "^4.3.0"
onnxruntime = "^1.18.0"
onnxmltools = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
